@@ -653,7 +653,7 @@ static void server_main_loop(int remaining_threads_to_start)
 AP_DECLARE(apr_status_t) ap_mpm_query(int query_code, int *result)
 {
     switch(query_code){
-        case AP_MPMQ_MAX_DAEMONS:
+        case AP_MPMQ_MAX_DAEMON_USED:
             *result = ap_max_child_assigned;
             return APR_SUCCESS;
         case AP_MPMQ_IS_THREADED:
@@ -685,6 +685,9 @@ AP_DECLARE(apr_status_t) ap_mpm_query(int query_code, int *result)
             return APR_SUCCESS;
         case AP_MPMQ_MAX_REQUESTS_DEAMON:
             *result = ap_max_requests_per_child;
+            return APR_SUCCESS;
+        case AP_MPMQ_MAX_DAEMONS:
+            *result = ap_thread_limit;
             return APR_SUCCESS;
     }
     return APR_ENOTIMPL;
