@@ -315,7 +315,7 @@ static void accept_mutex_off(void)
 AP_DECLARE(apr_status_t) ap_mpm_query(int query_code, int *result)
 {
     switch(query_code){
-        case AP_MPMQ_MAX_DAEMONS:
+        case AP_MPMQ_MAX_DAEMON_USED:
             *result = ap_daemons_limit;
             return APR_SUCCESS;
         case AP_MPMQ_IS_THREADED:
@@ -347,6 +347,9 @@ AP_DECLARE(apr_status_t) ap_mpm_query(int query_code, int *result)
             return APR_SUCCESS;
         case AP_MPMQ_MAX_REQUESTS_DEAMON:
             *result = ap_max_requests_per_child;
+            return APR_SUCCESS;
+        case AP_MPMQ_MAX_DAEMONS:
+            *result = ap_daemons_limit;
             return APR_SUCCESS;
     }
     return APR_ENOTIMPL;
